refactor: changed toString of passportInfo